k8-manifests/chaos-n1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-n1-network
  namespace: hashed-network
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - n1.main.hashed.systems
    secretName: chaos-n1-network
  rules:
  - host: n1.main.hashed.systems
    http:
      paths:
      - pathType: Prefix
        path: /p2p/
        backend:
          service:
            name: chaos-n1-network
            port:
              number: 30333
      - pathType: Prefix
        path: /
        backend:
          service:
            name: chaos-n1-network
            port:
              number: 9944
      - pathType: Prefix
        path: /rpc/
        backend:
          service:
            name: chaos-n1-network
            port:
              number: 9933
